feat: add avatar to user model
